--- a/1/EomTool/EomToolWeb/packages.config
+++ b/1/EomTool/EomToolWeb/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="jQuery" version="1.7.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
+  <package id="KendoGridBinderEx" version="5.0.0.7" targetFramework="net45" />
   <package id="KendoUIWeb" version="2012.2.710" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -22,6 +25,7 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception" version="3.0.0.8" targetFramework="net45" />
+  <package id="System.Linq.Dynamic.Library" version="1.1.13" targetFramework="net45" />
   <package id="TinyMCE" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.jQuery" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.MVC.JQuery" version="3.4.7" targetFramework="net40" />
