--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Entities\TD\DBM\CreativeDailySummary.cs" />
     <Compile Include="Entities\TD\DBM\DBMDailySummary.cs" />
     <Compile Include="Entities\TD\DBM\InsertionOrder.cs" />
+    <Compile Include="Entities\TD\DBM\UserListStat.cs" />
     <Compile Include="Entities\TD\TradingDeskAccount.cs" />
     <Compile Include="Migrations\201406271827066_InitialCreate.cs" />
     <Compile Include="Migrations\201406271827066_InitialCreate.Designer.cs">
@@ -361,6 +362,10 @@
     <Compile Include="Migrations\201504231735446_Mig_DBMConversionFields.cs" />
     <Compile Include="Migrations\201504231735446_Mig_DBMConversionFields.Designer.cs">
       <DependentUpon>201504231735446_Mig_DBMConversionFields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505281601539_Mig_UserListStat.cs" />
+    <Compile Include="Migrations\201505281601539_Mig_UserListStat.Designer.cs">
+      <DependentUpon>201505281601539_Mig_UserListStat.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ChangeIdentityOperation.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -463,6 +468,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504231735446_Mig_DBMConversionFields.resx">
       <DependentUpon>201504231735446_Mig_DBMConversionFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505281601539_Mig_UserListStat.resx">
+      <DependentUpon>201505281601539_Mig_UserListStat.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
