--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -301,6 +301,7 @@
     <Compile Include="Commands\TDSynchAdDailySummariesAdrollCsv.cs" />
     <Compile Include="Commands\TDSynchCreativeDailySummariesDbm.cs" />
     <Compile Include="Commands\TDSynchCreativeDailySummariesDbmCsv.cs" />
+    <Compile Include="Commands\TDSynchDailyStatsDbm.cs" />
     <Compile Include="Commands\TDSynchDailySummariesDbmCsv.cs" />
     <Compile Include="Commands\TDSynchDataTransferFilesDbm.cs" />
     <Compile Include="Commands\TDSynchUserListStats.cs">
@@ -384,11 +385,13 @@
     <Compile Include="Etl\TradingDesk\Extracters\DbmCloudStorageExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\DbmConversionExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\DbmCsvExtracter.cs" />
+    <Compile Include="Etl\TradingDesk\Extracters\DbmDailyStatsExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\DbmUserListStatExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\AdrollAdDailySummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\AdrollAdDailySummaryLoader2.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\DbmConversionLoader.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\DbmCreativeDailySummaryLoader.cs" />
+    <Compile Include="Etl\TradingDesk\Loaders\DbmDailyStatsLoader.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\DbmDailySummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\Loaders\DbmUserListStatLoader.cs" />
     <Compile Include="Etl\Transformer.cs" />
