--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -134,11 +134,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BudgetsController.cs" />
+    <Compile Include="Controllers\ScreensController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BudgetsVM.cs" />
     <Compile Include="Models\OfferVM.cs" />
+    <Compile Include="Models\ScreensVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -870,6 +872,7 @@
     <Content Include="Views\Budgets\Start.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DecimalComma.cshtml" />
     <Content Include="Views\Budgets\Admin.cshtml" />
+    <Content Include="Views\Screens\Test.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
