--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -4394,6 +4394,7 @@
     <Content Include="Scripts\kendo\2015.1.408\kendo.virtuallist.min.js.map" />
     <Content Include="Scripts\kendo\2015.1.408\kendo.web.min.js.map" />
     <Content Include="Scripts\kendo\2015.1.408\kendo.window.min.js.map" />
+    <Content Include="Views\Advertisers\Top.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
