--- a/3/API/AdRoll/AdRoll.csproj
+++ b/3/API/AdRoll/AdRoll.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="AdRollUtility.cs" />
     <Compile Include="Clients\AdReportClient.cs" />
+    <Compile Include="Clients\AdvertisableReportClient.cs" />
     <Compile Include="Clients\ApiClient.cs" />
     <Compile Include="Clients\ApiRequest.cs" />
     <Compile Include="Entities\AdSummary.cs" />
