DASynchOfferBudgetStats - do 4 in parallel

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -58,7 +58,7 @@
     <add key="GmailReporting_Password" value="1423qrwe" />
 
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
-    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
+    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com,search@directagents.com" />
 
     <add key="PATH_Search" value="C:\DA\portal\search" />
 
