--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -748,6 +748,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Screens\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -867,6 +868,7 @@
     <Content Include="Views\Shared\DisplayTemplates\Money.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Percent.cshtml" />
@@ -874,8 +876,9 @@
     <Content Include="Views\Budgets\Start.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DecimalComma.cshtml" />
     <Content Include="Views\Budgets\Admin.cshtml" />
-    <Content Include="Views\Screens\Test.cshtml" />
     <Content Include="Views\Stats\AdRoll.cshtml" />
+    <Content Include="Views\Stats\Cake.cshtml" />
+    <Content Include="Views\Stats\Links.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
