EOMWeb- stats updates

--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -13,10 +13,10 @@
     <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DAMain1" connectionString="data source=biz\sqlexpress;initial catalog=DAMain1;user id=sa;password=sp0ngbOb" providerName="System.Data.SqlClient" />
-    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="WikiContext" connectionString="metadata=res://*/Entities.Wiki.WikiModel.csdl|res://*/Entities.Wiki.WikiModel.ssdl|res://*/Entities.Wiki.WikiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsDev;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="WikiContext" connectionString="metadata=res://*/Entities.Wiki.WikiModel.csdl|res://*/Entities.Wiki.WikiModel.ssdl|res://*/Entities.Wiki.WikiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="WikiContext" connectionString="metadata=res://*/Entities.Wiki.WikiModel.csdl|res://*/Entities.Wiki.WikiModel.ssdl|res://*/Entities.Wiki.WikiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsDev;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="WikiContext" connectionString="metadata=res://*/Entities.Wiki.WikiModel.csdl|res://*/Entities.Wiki.WikiModel.ssdl|res://*/Entities.Wiki.WikiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DAMain1Entities" connectionString="metadata=res://*/Entities.DAMain1.csdl|res://*/Entities.DAMain1.ssdl|res://*/Entities.DAMain1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DAMain1;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -30,6 +30,19 @@
     <add key="EmailToEOM" value="eom@directagents.com" />
     <add key="EmailToInvoiceRequest" value="kevin@directagents.com" />
   </appSettings>
+
+  <!--Note: In order for this to work, need to use the Configuration Manager in IIS and unlock the sections for anonymous/windowsAuthentication. -->
+  <location path="stats">
+    <system.webServer>
+      <security>
+        <authentication>
+          <anonymousAuthentication enabled="true" />
+          <windowsAuthentication enabled="false" />
+        </authentication>
+      </security>
+    </system.webServer>
+  </location>
+
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -120,7 +133,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true">
+  <!--<eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true">-->
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="false">
     <paymentBatches canHold="DIRECTAGENTS\jboaz" numAccountingPeriods="16" />
   </eomToolWeb>
 </configuration>
