--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -748,7 +748,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Screens\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -879,6 +878,8 @@
     <Content Include="Views\Stats\AdRoll.cshtml" />
     <Content Include="Views\Stats\CakeAdv.cshtml" />
     <Content Include="Views\Stats\Links.cshtml" />
+    <Content Include="Views\Screens\Variable.cshtml" />
+    <Content Include="Views\Screens\Variables.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
