--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
@@ -23,6 +23,28 @@
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
   </appSettings>
+
+  <!--Note: In order for this to work, need to use the Configuration Manager in IIS and unlock the sections for anonymous/windowsAuthentication. -->
+  <location path="stats">
+    <system.webServer>
+      <security>
+        <authentication>
+          <anonymousAuthentication enabled="true" />
+          <windowsAuthentication enabled="false" />
+        </authentication>
+      </security>
+    </system.webServer>
+  </location>
+  <location path="screens">
+    <system.webServer>
+      <security>
+        <authentication>
+          <anonymousAuthentication enabled="true" />
+          <windowsAuthentication enabled="false" />
+        </authentication>
+      </security>
+    </system.webServer>
+  </location>
 
   <system.web>
     <httpRuntime targetFramework="4.5" />
