--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -4,11 +4,22 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DATDContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DATDContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <entityFramework>
+    <contexts>
+      <!--<context type="DirectAgents.Domain.Contexts.DAContext, DirectAgents.Domain" disableDatabaseInitialization="true"/>-->
+    </contexts>
+  </entityFramework>
 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,7 +31,9 @@
     <add key="GmailReporting_Email" value="reporting@directagents.com" />
     <add key="GmailReporting_Password" value="1423qrwe" />
 
-    <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
+    <!--TODO: transform this in release config... remove value-->
+    <!--<add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />-->
+    <add key="BudgetAlerts_TestEmail" value="" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
   </appSettings>
 
