migrations for moving of DA-TD entities

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -154,6 +154,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>WikiModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201507282051383_Initial.cs" />
+    <Compile Include="MigrationsTD\201507282051383_Initial.Designer.cs">
+      <DependentUpon>201507282051383_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
@@ -197,6 +202,10 @@
     <Compile Include="Migrations\201507152042017_Mig_Sales.cs" />
     <Compile Include="Migrations\201507152042017_Mig_Sales.Designer.cs">
       <DependentUpon>201507152042017_Mig_Sales.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507281756459_Mig_MoveTD.cs" />
+    <Compile Include="Migrations\201507281756459_Mig_MoveTD.Designer.cs">
+      <DependentUpon>201507281756459_Mig_MoveTD.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -255,6 +264,9 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="MigrationsTD\201507282051383_Initial.resx">
+      <DependentUpon>201507282051383_Initial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
@@ -287,6 +299,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507152042017_Mig_Sales.resx">
       <DependentUpon>201507152042017_Mig_Sales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507281756459_Mig_MoveTD.resx">
+      <DependentUpon>201507281756459_Mig_MoveTD.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
