--- a/3/DirectAgents.Web/packages/repositories.config
+++ b/3/DirectAgents.Web/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\1\DirectAgents.Domain\packages.config" />
+  <repository path="..\..\API\AdRoll\packages.config" />
   <repository path="..\..\CakeExtracter.ConsoleApplication\packages.config" />
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\DirectAgents.Web\packages.config" />
